<resources>
    <string name="app_name">TelegramClone</string>
    <string name="create_secret_chat">Создать секретный чат</string>
    <string name="create_channel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="phone">Звонки</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invate">Пригласить друзей</string>
    <string name="faq">FAQ</string>


    <string name="settings_default_username">Sladkaya Bulka</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_phone_number">+999999999</string>
    <string name="settings_default_login">Sladkaya Bulka</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_default_bio">О себе</string>
    <string name="settings_label_bio">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_register_image">register_image</string>


    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_notify_message">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="regester_toast_enter_phone">Введите номер телефона</string>
    <string name="register_phone_hint">+1</string>
    <string name="settings_toast_name_is_empty">Имя не может быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_hint_input_username">Username</string>
    <string name="settings_input_hint_bio">Bio</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="create_group">Создать группу</string>
    <string name="add_member">Добавить участника</string>

    <plurals name="count_members">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="many">%d участников</item>
        <item quantity="other">%d участников</item>
    </plurals>
</resources>