<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.EnterCodeFragment">

    <ImageView
            android:id="@+id/register_image"
            android:src="@drawable/register_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/vertical_large_margin"
            android:contentDescription="@string/cd_register_image"/>

    <TextView
            android:id="@+id/register_text_enter_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text_enter_code"
            android:textStyle="bold"
            android:textSize="@dimen/normalText"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/register_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/app_small_margin"/>

    <TextView
            android:id="@+id/register_text_notify_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text_notify_message"
            app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/app_small_margin"
            android:gravity="end"
            style="@style/smallText"/>

    <EditText
            android:id="@+id/register_input_code"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/register_text_notify_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            android:hint="@string/register_hint_default_code"
            android:maxLength="6"
            android:gravity="center"
            style="@style/editText"/>


</androidx.constraintlayout.widget.ConstraintLayout>