<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_header_block"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_user_photo"
                android:layout_width="@dimen/settings_user_photo_width"
                android:layout_height="@dimen/settings_user_photo_height"
                android:src="@drawable/default_photo"
                app:civ_circle_background_color="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/app_margin"/>

        <TextView
                android:id="@+id/settings_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                tools:text="@string/settings_default_username"
                android:textSize="@dimen/normalText"
                android:layout_marginTop="@dimen/app_small_margin"
                android:layout_marginStart="@dimen/app_margin"
                app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_user_photo"/>

        <TextView
                android:id="@+id/settings_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccentDarker"
                tools:text="@string/settings_default_status"
                android:textSize="@dimen/smallText"
                android:layout_marginStart="@dimen/app_margin"
                app:layout_constraintStart_toEndOf="@+id/settings_user_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_full_name"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:id="@+id/settings_text_account"
            android:text="@string/settings_text_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/smallText"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/app_margin"
            android:layout_marginTop="@dimen/vertical_large_margin"
            app:layout_constraintTop_toBottomOf="@id/settings_header_block"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_number_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_text_account"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/settingsButtons">

        <TextView
                android:id="@+id/settings_phone_number"
                tools:text="@string/settings_default_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_number_phone"
                style="@style/normalText"/>
        <TextView
                android:id="@+id/settings_label_phone_number"
                android:text="@string/settings_label_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_phone_number"
                style="@style/smallText"/>
        <View
                app:layout_constraintTop_toBottomOf="@id/settings_label_phone_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_number_phone"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/settingsButtons">

        <TextView
                android:id="@+id/settings_username"
                tools:text="@string/settings_default_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_username"
                style="@style/normalText"/>
        <TextView
                android:id="@+id/settings_label_username"
                android:text="@string/settings_label_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_username"
                style="@style/smallText"/>
        <View
                app:layout_constraintTop_toBottomOf="@id/settings_label_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settings_btn_change_bio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_btn_change_username"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/settingsButtons">

        <TextView
                android:id="@+id/settings_bio"
                tools:text="@string/settings_default_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/settings_btn_change_bio"
                style="@style/normalText"/>
        <TextView
                android:id="@+id/settings_label_bio"
                android:text="@string/settings_label_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_bio"
                style="@style/smallText"/>
        <View
                app:layout_constraintTop_toBottomOf="@id/settings_label_bio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/separator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_btn_change_photo"
            android:layout_width="@dimen/settings_btn_change_photo_width"
            android:layout_height="@dimen/settings_btn_change_photo_height"
            android:src="@drawable/ic_camera"
            app:civ_border_color="@color/colorGray"
            app:civ_circle_background_color="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/app_margin"
            app:layout_constraintTop_toBottomOf="@+id/settings_header_block"
            app:layout_constraintBottom_toBottomOf="@+id/settings_header_block"/>

</androidx.constraintlayout.widget.ConstraintLayout>